Changes file for DateTime::Incomplete

   All methods in DATETIME-LIKE section are implemented. Most are tested.

0.00_02  2003-07-19
   POD, makefile and CVS upload.

0.00_01  2003-07-17
   02incomplete.t created.
