@@ -2,7 +2,7 @@
 
 use strict;
 
-use Test::More tests => 15;
+use Test::More tests => 21;
 use DateTime;
 use DateTime::Incomplete;
 
@@ -20,6 +20,8 @@ $UNDEF2 = $UNDEF_CHAR x 2;   # xx
     my $dti_clone;
     my $str_clone;
     my $dti_half;
+    my $dti_complete;
+    my $str_complete;
 
     $dti = DateTime::Incomplete->new( 
         year =>   $dt->year,
@@ -30,6 +32,9 @@ $UNDEF2 = $UNDEF_CHAR x 2;   # xx
         second => $dt->second,
         nanosecond => $dt->nanosecond,
     );
+    $dti_complete = $dti->clone;  # a fully-defined datetime
+    $str_complete = $dti->datetime;
+
     is( $dti->datetime , $dt->datetime, 
         'new() matches DT->new' );
 
@@ -63,6 +68,9 @@ $UNDEF2 = $UNDEF_CHAR x 2;   # xx
 
     is( $dti->is_undef , 0,
         'not undef' );
+
+
+    # Tests to_datetime
 
     $dti_half = $dti->clone;   # a half-defined datetime
     my $dt2 = $dti_half->to_datetime( base => $dt );
@@ -102,6 +110,7 @@ $UNDEF2 = $UNDEF_CHAR x 2;   # xx
     ok( ! defined( $dti->nanosecond ),
         'undef nanosecond' );
 
+
     # Tests is_undef, true
 
     is( $dti->is_undef , 1,
@@ -111,7 +120,78 @@ $UNDEF2 = $UNDEF_CHAR x 2;   # xx
     # set_time_zone, time_zone
     #   -- together with contains() and to_datetime()
 
+
+
+  # Tests to_recurrence()
+
+  SKIP: 
+  {
+    skip $DateTime::Incomplete::RECURRENCE_MODULE . " is not installed", 2
+         unless $DateTime::Incomplete::CAN_RECURRENCE;
+
+    my $set;
+
+    # a complete definition yields a DT::Set with one element
+
+    $set = $dti_complete->to_recurrence;
+    is( $set->min->datetime , $str_complete,
+        'complete definition gives a single date' );
+
+    # no day
+
+    my $dti_no_day = $dti_complete->clone;
+    $dti_no_day->set( day => undef );   # 2003-01-xxT00:00:00
+    $set = $dti_no_day->to_recurrence;
+    is( $set->min->datetime , '2003-01-01T00:00:00',
+        'first day in 2003-01' );
+    is( $set->max->datetime , '2003-01-31T00:00:00',
+        'last day in 2003-01' );
+
+
+    SKIP: {
+        skip "This is not an error - this test would take too much resources to complete", 1
+             if 1;
+
+        # no day, no minute
+
+        # Note: this test takes a lot of time to complete, because
+        # the _finite_ set is quite big (31 * 60 datetimes)
+
+        $dti_no_day->set( minute => undef );   # 2003-01-xxT00:xx:00
+        $set = $dti_no_day->to_recurrence;
+        is( $set->min->datetime , '2003-01-01T00:00:00',
+            'first day/minute in 2003-01' );
+        is( $set->max->datetime , '2003-01-31T00:59:00',
+            'last day/minute in 2003-01' );
+
+    };
+
+
+    # no year, no day, no minute
+
+    {
+      $dti_no_day = $dti_complete->clone;
+      $dti_no_day->set( year => undef );  
+      $dti_no_day->set( month => 12 );   
+      $dti_no_day->set( day => 24 );         # xx-12-24T00:00:00
+      $dti_no_day->set( minute => undef );   # xx-12-24T00:xx:00
+
+      $set = $dti_no_day->to_recurrence;
+
+      my $dt = DateTime->new( year => 2003 );
+
+      is( $set->next( $dt )->datetime , '2003-12-24T00:00:00',
+          'next xmas' );
+      is( $set->previous( $dt )->datetime , '2002-12-24T00:59:00',
+          'last xmas' );
+    }
+
+  # End: Tests to_recurrence()
+
+  };
+
 }
+
 
 1;
 
